tests/compile-fail/access_outside_visibility.stderr
error[E0603]: struct `Flags2` is private
  --> tests/compile-fail/access_outside_visibility.rs:17:22
   |
17 |     let _ = example::Flags2::FLAG_B;
   |                      ^^^^^^ private struct
   |
note: the struct `Flags2` is defined here
  --> tests/compile-fail/access_outside_visibility.rs:4:5
   |
4  | /     bitflags! {
5  | |         pub struct Flags1: u32 {
6  | |             const FLAG_A = 0b00000001;
...  |
12 | |     }
   | |_____^
   = note: this error originates in the macro `$crate::__declare_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
